force-app/main/default/objects/Unbounce_Webhook_Delivery__c/Unbounce_Webhook_Delivery__c.object-meta.xml
<CustomObject>
    <description>Tracks outbound Unbounce webhook delivery attempts for intake status updates.</description>
    <label>Unbounce Webhook Delivery</label>
    <nameField>
        <displayFormat>UWD-{00000000}</displayFormat>
        <label>Unbounce Webhook Delivery Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unbounce Webhook Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>