force-app/main/default/objects/Unbounce_Webhook_Delivery__c/fields/Delivery_Attempt__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Attempt__c</fullName>
    <label>Delivery Attempt</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>