force-app/main/default/objects/Unbounce_Webhook_Delivery__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Unbounce Webhook Deliveries</relationshipLabel>
    <relationshipName>Unbounce_Webhook_Deliveries</relationshipName>
    <type>Lookup</type>
</CustomField>