force-app/main/default/objects/Unbounce_Webhook_Delivery__c/fields/Unbounce_Integration_Config__c.field-meta.xml
<CustomField>
    <fullName>Unbounce_Integration_Config__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unbounce Integration Config</label>
    <referenceTo>Unbounce_Integration_Config__c</referenceTo>
    <relationshipLabel>Unbounce Webhook Deliveries</relationshipLabel>
    <relationshipName>Unbounce_Webhook_Deliveries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>